--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,44 @@
 # Włączenie modułu rewrite
 RewriteEngine On
+RewriteBase /
 
-# Podstawowe przekierowania dla podstron
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+# Ustaw index.php jako domyślny plik indeksu
+DirectoryIndex index.php
+
+# Przekierowanie z index.php na główny adres
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
+RewriteRule ^index\.php$ / [R=301,L]
+
+# ================ OPCJE SSL/HTTPS ================
+# Odkomentuj poniższe linie, gdy włączysz SSL/HTTPS
+
+# Przekierowanie z HTTP na HTTPS
+# RewriteCond %{HTTPS} off
+# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Włącz HTTP Strict Transport Security (HSTS)
+# <IfModule mod_headers.c>
+#   Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+# </IfModule>
+
+# Ustaw flagę secure dla ciasteczek
+# <IfModule mod_headers.c>
+#   Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
+# </IfModule>
+
+# Zapobiegaj wczytywaniu strony w ramce (clickjacking)
+# <IfModule mod_headers.c>
+#   Header always set X-Frame-Options "SAMEORIGIN"
+# </IfModule>
+
+# Włącz Cross-Site Scripting (XSS) Protection
+# <IfModule mod_headers.c>
+#   Header always set X-XSS-Protection "1; mode=block"
+#   Header always set X-Content-Type-Options "nosniff"
+# </IfModule>
+# ================ KONIEC OPCJI SSL/HTTPS ================
+
+# Przekierowania dla podstron - konkretne reguły przed ogólnymi
 RewriteRule ^bmi/?$ index.php?page=bmi [L,QSA]
 RewriteRule ^calories/?$ index.php?page=calories [L,QSA]
 RewriteRule ^units/?$ index.php?page=units [L,QSA]
@@ -18,6 +53,13 @@ RewriteRule ^vimeo/?$ index.php?page=downloaders_vimeo [L,QSA]
 
 # Strona główna
 RewriteRule ^/?$ index.php?page=home [L,QSA]
+
+# Ogólna reguła dla pozostałych podstron
+# Jeśli żądany adres nie jest plikiem ani katalogiem
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# Przekieruj na index.php z parametrem page
+RewriteRule ^([^/]+)/?$ index.php?page=$1 [L,QSA]
 
 # Zabezpieczenie plików .htaccess i .htpasswd
 <Files ~ "^\.ht">
